# reminders

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  reminders-gtk-spec.md
.github/workflows/: ci.yml  release.yml
data/: com.smounters.Reminders.desktop  com.smounters.Reminders.metainfo.xml
debian/: changelog  control  copyright  install  rules
packaging/: build-deb.sh
reminders/: __init__.py  __main__.py  app.py  autostart.py  models.py  notifier.py  paths.py  scheduler.py  storage.py  tray.py
reminders/windows/: edit_dialog.py  main_window.py  settings_dialog.py
tests/: test_descriptions.py  test_scheduler.py  test_storage.py
